--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
 
 <audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="Quake 2 Soundtrack - Sonic Mayhem - Quad Machine.oga" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
 
