--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@ Your browser does not support the audio element.
   <style>
         body {
             margin: 0;
-            overflow: hidden;
+            overflow-x:
+            hidden;
+            overflow-y:
+            auto;
             background-color: black;
         }
         #fireCanvas {
